--- a/goit-markup-hw-01/index.html
+++ b/goit-markup-hw-01/index.html
@@ -24,30 +24,36 @@
       <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
       <button type="button">Zamów usługę</button>
 
-      <h4>LOREM IPSUM</h4>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-        sem. Sed non sodales dui. Interdum et malesuada
-      </p>
-
-      <h4>LOREM IPSUM</h4>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-        sem. Sed non sodales dui. Interdum et malesuada
-      </p>
-
-      <h4>LOREM IPSUM</h4>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-        sem. Sed non sodales dui. Interdum et malesuada
-      </p>
-
-      <h4>LOREM IPSUM</h4>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-        sem. Sed non sodales dui. Interdum et malesuada
-      </p>
-
+     <ul>
+        <li>
+          <h4>LOREM IPSUM</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
+        <li>
+          <h4>LOREM IPSUM</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
+        <li>
+          <h4>LOREM IPSUM</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
+        <li>
+          <h4>LOREM IPSUM</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
+      </ul>
       <h2>Czym się zajmujemy</h2>
       <ul>
         <li>
