--- a/goit-markup-hw-01/index.html
+++ b/goit-markup-hw-01/index.html
@@ -21,86 +21,114 @@
       <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-      <button type="button">Zamów usługę</button>
+      <section>
+        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button type="button">Zamów usługę</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h4>LOREM IPSUM</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h4>LOREM IPSUM</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h4>LOREM IPSUM</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h4>LOREM IPSUM</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Czym się zajmujemy</h2>
+        <ul>
+          <li>
+            <img src="./images/img.jpg" alt="komputer" />
+          </li>
+          <li>
+            <img src="./images/img2.jpg" alt="laptop" />
+          </li>
+          <li>
+            <img src="./images/img3.jpg" alt="tablet" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Nasz zespół</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/1.jpg"
+              alt="John Doe 1"
+              width="270"
+              height="260"
+            />
+            <h3>John Doe</h3>
+            <p>Product Designer</p>
+          </li>
 
-     <ul>
-        <li>
-          <h4>LOREM IPSUM</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        <li>
-          <h4>LOREM IPSUM</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        <li>
-          <h4>LOREM IPSUM</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        <li>
-          <h4>LOREM IPSUM</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-      </ul>
-      <h2>Czym się zajmujemy</h2>
-      <ul>
-        <li>
-          <img src="./images/img.jpg" alt="komputer" />
-        </li>
-        <li>
-          <img src="./images/img2.jpg" alt="laptop" />
-        </li>
-        <li>
-          <img src="./images/img3.jpg" alt="tablet" />
-        </li>
-      </ul>
+          <li>
+            <img
+              src="./images/2.jpg"
+              alt="John Doe 2"
+              width="270"
+              height="260"
+            />
+            <h3>John Doe</h3>
+            <p>Front Developer</p>
+          </li>
 
-      <h2>Nasz zespół</h2>
-      <ul>
-        <li>
-          <img src="./images/1.jpg" alt="John Doe 1" width="270" height="260" />
-          <h3>John Doe</h3>
-          <p>Product Designer</p>
-        </li>
+          <li>
+            <img
+              src="./images/3.jpg"
+              alt="John Doe 3"
+              width="270"
+              height="260"
+            />
+            <h3>John Doe</h3>
+            <p>Marketing</p>
+          </li>
 
-        <li>
-          <img src="./images/2.jpg" alt="John Doe 2" width="270" height="260" />
-          <h3>John Doe</h3>
-          <p>Front Developer</p>
-        </li>
-
-        <li>
-          <img src="./images/3.jpg" alt="John Doe 3" width="270" height="260" />
-          <h3>John Doe</h3>
-          <p>Marketing</p>
-        </li>
-
-        <li>
-          <img src="./images/4.jpg" alt="John Doe 4" width="270" height="260" />
-          <h3>John Doe</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
+          <li>
+            <img
+              src="./images/4.jpg"
+              alt="John Doe 4"
+              width="270"
+              height="260"
+            />
+            <h3>John Doe</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
       <address>
-        <a href="#">WebStudio</a><br />
-        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <ul>
+          <li><a href="#">WebStudio</a><br /></li>
+          <li><p>m. Warszawa, Aleje Jerozolimskie 21</p></li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+        </ul>
       </address>
     </footer>
   </body>
